[gd_scene load_steps=4 format=3 uid="uid://df0sf8konc4fk"]

[ext_resource type="Script" path="res://world/Flags.gd" id="1_3ix3d"]
[ext_resource type="Texture2D" uid="uid://casn4eb41am84" path="res://world/flags/RedFlag.tres" id="2_08m7e"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_qhmss"]
a = Vector2(45, 0)
b = Vector2(-42, 0)

[node name="Flags" type="Area2D"]
z_index = 10
collision_layer = 0
collision_mask = 2
script = ExtResource("1_3ix3d")

[node name="ShapeToPassThrough" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("SegmentShape2D_qhmss")

[node name="LeftFlag" type="Sprite2D" parent="."]
position = Vector2(-48, -8)
texture = ExtResource("2_08m7e")

[node name="RightFlag" type="Sprite2D" parent="."]
position = Vector2(48, -8)
texture = ExtResource("2_08m7e")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
